meta tags 추가, SEO 강화

--- a/posts/인공지능입문1.md
+++ b/posts/인공지능입문1.md
@@ -6,6 +6,8 @@ date: '2023-03-31'
 thumbnail: https://user-images.githubusercontent.com/75651834/229043134-d344a421-d8ff-4225-8c02-58b614b0dbf1.png
 
 category: 'AI'
+
+tags: 'AI introduction, machine learning, deep learning, Jupyter Notebook tips, AI vs ML vs DL, supervised learning, unsupervised learning, reinforcement learning, Jupyter Notebook usage, Markdown, shortcuts, extensions, data visualization, project experience, 인공지능 입문, 머신러닝, 딥러닝, 주피터 노트북 팁, AI 대 ML 대 DL, 지도학습, 비지도학습, 강화학습, 주피터 노트북 사용법, 마크다운, 단축키, 확장 프로그램, 데이터 시각화, 프로젝트 경험'
 ---
 
 # [피살책] 인공지능 입문기(1편) - AI, ML, DL 비교 + 주피터 노트북 사소한 팁
